z-index on project buttons fixed

--- a/css/projects.css
+++ b/css/projects.css
@@ -26,12 +26,17 @@
 #github-btn {
   margin-left: 20px;
   margin-bottom: 10px;
+  z-index: -1;
 }
 
 .live-demo {
   margin-left: 30px;
   width: 40%;
   margin-top: 0;
+}
+
+#demo-btn {
+  z-index: -2;
 }
 
 .description {
